--- a/course_asp.net_mvc/WebApplication1/WebApplication1/Views/Instructor/Index.cshtml
+++ b/course_asp.net_mvc/WebApplication1/WebApplication1/Views/Instructor/Index.cshtml
@@ -21,4 +21,5 @@
         </tr>
     }
 </table>
+<div class="btn btn-link  btn-success"><a href="/Instructor/AddInstructor" style="color:black; text-decoration:none;">Add Instructor</a> </div>
 
