--- a/course_asp.net_mvc/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/course_asp.net_mvc/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome  On ITI </h1>
+    <p>Learn about <a href="https://github.com/SamyMo7amed">My Github because It is the project at  course </a>.</p>
 </div>
