--- a/course_asp.net_mvc/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/course_asp.net_mvc/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -19,11 +19,15 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                       
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Instructor" asp-action="Index">Instructors</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="Index">Courses</a>
                         </li>
                         
                     </ul>
@@ -39,7 +43,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - ITI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            Linkedin: <a href="https://www.linkedin.com/in/samy-mohamed-b63ba0269/">Samy_Mohamed</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
